Started journey to JDK11